tests/ui/fmt/ifmt-unknown-trait.stderr
error: unknown format trait `notimplemented`
  --> $DIR/ifmt-unknown-trait.rs:2:16
   |
LL |     format!("{:notimplemented}", "3");
   |                ^^^^^^^^^^^^^^
   |
   = note: the only appropriate formatting traits are:
           - ``, which uses the `Display` trait
           - `?`, which uses the `Debug` trait
           - `e`, which uses the `LowerExp` trait
           - `E`, which uses the `UpperExp` trait
           - `o`, which uses the `Octal` trait
           - `p`, which uses the `Pointer` trait
           - `b`, which uses the `Binary` trait
           - `x`, which uses the `LowerHex` trait
           - `X`, which uses the `UpperHex` trait

error: aborting due to previous error

